modules restful * wip
